--- a/style.css
+++ b/style.css
@@ -1,128 +1,130 @@
 #nav-bar {
-    display: flex;
-    width: 100%;
-    height: 50px;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  width: 100%;
+  height: 50px;
+  align-items: center;
+  justify-content: space-around;
 }
 
 #rightNavView {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 #rightNavView button {
-    height: 35px;
-    width: 40px;
-    margin-left: 20px;
+  height: 35px;
+  width: 40px;
+  margin-left: 20px;
 }
 
 #searchView {
-    display: flex;
-    align-items: center;
-    width: 50%;
+  display: flex;
+  align-items: center;
+  width: 50%;
 }
 
 #searchView button {
-    height: 35px;
-    width: 40px;
+  height: 35px;
+  width: 40px;
 }
 
 #searchView input {
-    width: 50%;
-    height: 30px;
+  width: 50%;
+  height: 30px;
 }
 
 .video-thumb {
-    width: 130px;
-    height: 100px;
+  width: 130px;
+  height: 100px;
 }
 
 #logo {
-    width: 130px;
-    height: 100px;
+  width: 130px;
+  height: 100px;
 }
 
 #content {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 50px;
-    padding: 40px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 50px;
+  padding: 40px;
 }
 
 #videoContainer {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    height: 700px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  height: 700px;
 }
 
 #sidebar {
-    display: flex;
-    margin-left: 10px;
+  display: flex;
+  margin-left: 10px;
 }
 
 .video-item {
-    display: flex;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+  display: flex;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
 }
 
 .video-item img {
-    width: 150px;
-    height: 100px;
-    margin-right: 20px;
+  width: 150px;
+  height: 100px;
+  margin-right: 20px;
 }
 
 .video-item div {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
 }
 
 .video-info {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;   
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
 }
 
-#title, #viewcount, #user {
-    font-size: 20px; 
+#title,
+#viewcount,
+#user {
+  font-size: 20px;
 }
 
 #video-avatar {
-    display: flex;
-    align-items: flex-start;
-    flex-direction: row;
-    justify-content: flex-start;   
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
 #video-avatar img {
-    border-radius: 70px;
-    border-collapse: separate; 
-    width: 70px;
-    height: 70px; 
+  border-radius: 70px;
+  border-collapse: separate;
+  width: 70px;
+  height: 70px;
 }
 
 #video-avatar p {
-    margin-left: 20px; 
+  margin-left: 20px;
 }
 
 #video-actions button {
-    margin-top: 10px;
-    height: 50px;
-    width: 80px;
-    margin-left: 10px;
-    font-size: 20px;
+  margin-top: 10px;
+  height: 50px;
+  width: 80px;
+  margin-left: 10px;
+  font-size: 20px;
 }
 
 #subscribe {
-    background-color: red;
-    color: white;
-    width: 150px;
-    height: 50px;
-    margin-top: 10px;
+  background-color: red;
+  color: white;
+  width: 150px;
+  height: 50px;
+  margin-top: 10px;
 }
